# svg-captcha-solver

./: README.md  setup.cfg  setup.py  token
src/solvers/svgcaptcha/: solver.py
src/svg_captcha_solver.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_divide_by_three.py  test_multiply_by_three.py
