[metadata]
name = svg-captcha-solver
version = 0.0.9
author = kamran saberifard
author_email = kamisaberi@gmail.com
description = svg captcha solver
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kamisaberi
project_urls =
    Bug Tracker = https://github.com/kamisaberi
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src